# YOLO-Label-Validation

./: .gitignore  AGENTS.md  PLAN.md  PLANS.md  README.md  RULES.md  SPEC.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: defaults.json  runtime.integration.json  thresholds.example.yaml
docs/: architecture.md  documentation.md  implement.md  plan.md  project_spec.md  prompt.md  srs_v1.md
docs/exec-plans/: README.md
docs/failures/: taxonomy.md
schemas/: class_map.schema.json  class_stats.schema.json  decision_result.schema.json  golden_eval_report.schema.json  golden_set_manifest.schema.json  image_index.schema.json  manual_review_item.schema.json  metrics_dashboard_source.schema.json  missing_result.schema.json  normalized_annotation.schema.json  patch.schema.json  refine_result.schema.json  review_candidate.schema.json  risk_score.schema.json  rule_issue.schema.json  run_manifest.schema.json  run_summary.schema.json  runtime_integration.schema.json  vlm_request.schema.json  vlm_review.schema.json
scripts/: check_task_docs.py  init_context_docs.py  init_task_docs.py  run_cli.py
src/yolo_label_validation/: artifact_io.py  bootstrap.py  cli.py  contracts.py  decision.py  detector_refine.py  doc_check.py  ingest.py  materialize.py  risk.py  rules.py  runtime_config.py  task_docs.py  vlm.py
tasks/: README.md
tests/: __init__.py  support.py  test_bootstrap.py  test_decision.py  test_detector_refine.py  test_ingest.py  test_materialize.py  test_risk.py  test_rules.py  test_runtime_config.py  test_task_docs.py  test_vlm.py
(+79 files in other folders)
